<resources>
    <string name="app_name">EmbeddedImage</string>
    <string name="elephant">Elephant</string>
    <string name="center_inside">Center Inside</string>
    <string name="fit_start">Fit Start</string>
    <string name="fit_end">Fit End</string>
    <string name="center">Center</string>
    <string name="fit_xy">Fit XY</string>
    <string name="fit_center">Fit Center</string>
    <string name="center_crop">Center Crop</string>
</resources>