<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="16dp"
        android:background="@color/material_dynamic_neutral80"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/elephant"
        android:contentDescription="@string/elephant" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/centerInside"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/center_inside"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/fitStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fit_start"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/fitEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fit_end"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/center"
            android:textSize="16sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/fitXY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fit_xy"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/fitCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fit_center"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/centerCrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/center_crop"
            android:textSize="16sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>